<resources>
    <string name="app_name">PeopleGroups</string>
    //StartActivity
    <string name="Already_have_account_on_start">ВОЙТИ</string>
    <string name="Register_on_start">Зарегистрироваться</string>
    <string name="Wellcom_on_start">PeopleGroups</string>
    //RegisterActivity
    <string name="Only_text_on_register">Создать новый аккаунт</string>
    <string name="User_name_on_register">Имя</string>
    <string name="Email_on_register">Почта</string>
    <string name="Password_on_register">Пароль</string>
    <string name="Register_on_register">Регистрация</string>
    //LoginActivity
    <string name="Only_text_on_login">PeopleGroups</string>
    <string name="Email_on_login">Почта</string>
    <string name="Password_on_login">Пароль</string>
    <string name="Login_on_login">Войти</string>
    <string name="reset_pass">Забыли пароль?</string>
    //MainActivity
    <string name="Text_on_main">Добро пожаловать!</string>
    <string name="username_on_main">Никнейм</string>
    <string name="UserMail">Почта</string>
    <string name="imageProfile">Фото профиля</string>
    //ResetPasswordActivity
    <string name="email_for_reset">Ваша почта</string>
    <string name="reset_but">Восстановить</string>
    //SplashActivity
    <string name="Wellcom_on_splash">PEOPLEGROUPS</string>
    //Navigation_menu
    <string name="Setup">Настройки</string>
    <string name="change_name">Изменить никнейм</string>
    <string name="Upload_image">Загрузить</string>
    <string name="chat">Чат</string>
    <string name="galerey">Галерея</string>
    <string name="nav_open">nav open</string>
    <string name="nav_close">nav close</string>
    //Option_menu
    <string name="Log_out">Выйти</string>
    //Upload_image
    <string name="choice_image">Выберете файл</string>
    <string name="enter_name_file">Введите название</string>

    //Fragments
    <string name="chat_fragmet">Добро пожаловать</string>


</resources>
