<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/Only_text_on_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Only_text_on_register"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/User_name_on_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/Only_text_on_login"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/User_name_on_register"
        android:inputType="textPersonName"
        android:textColor="@color/primary_dark" />

    <EditText
        android:id="@+id/Email_on_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/Email_on_register"
        android:inputType="textEmailAddress"
        android:textColor="@color/primary_dark" />

    <EditText
        android:id="@+id/Password_on_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/Password_on_register"
        android:inputType="numberPassword"
        android:textColor="@color/primary_dark" />

    <Button
        android:id="@+id/Register_on_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="189dp"
        android:text="@string/Register_on_register"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

</RelativeLayout>