<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".Login">

    <TextView
        android:id="@+id/Only_text_on_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Only_text_on_login"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Email_on_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="81dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/Email_on_login"
        android:inputType="textEmailAddress"
        android:textColor="@color/primary_dark"
         />

    <EditText
        android:id="@+id/Password_on_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Email_on_login"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/Password_on_login"
        android:inputType="numberPassword"
        android:textColor="@color/primary_dark"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/Login_on_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="186dp"
        android:text="@string/Login_on_login"
        android:textAllCaps="false"
        android:textColor="@color/accent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/reset_pass"
        android:layout_width="118dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/Login_on_login"
        android:gravity="left|center_vertical"
        android:text="@string/reset_pass"
        android:textColor="@color/accent"
        android:textSize="14sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/link_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:gravity="center_horizontal"
        android:text="Зарегистрируйтесь!"
        android:textColor="@color/accent"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>